[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/fuentes/DungeonFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://niveles/menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://main/UI/Menu/NuevoJuegoPrompt.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/cultus_splash.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 78
outline_size = 4
outline_color = Color( 0.211765, 0, 0.345098, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
cont_botones = NodePath("VBoxContainer")
boton_continuar = NodePath("VBoxContainer/cont botones/Continuar")
ng_prompt = NodePath("NGPrompt/NuevoJuegoPrompt")

[node name="Fondo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_bottom = -20.0

[node name="Titulo" type="Label" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.831373, 0.737255, 0.105882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cultus"

[node name="cont botones" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 87.0
margin_bottom = 235.0
size_flags_horizontal = 0
size_flags_vertical = 6
custom_constants/separation = 16

[node name="Continuar" type="Button" parent="VBoxContainer/cont botones"]
margin_right = 87.0
margin_bottom = 23.0
text = "Continuar"

[node name="JuegoNuevo" type="Button" parent="VBoxContainer/cont botones"]
margin_top = 39.0
margin_right = 87.0
margin_bottom = 62.0
text = "Juego nuevo"

[node name="Opciones" type="Button" parent="VBoxContainer/cont botones"]
margin_top = 78.0
margin_right = 87.0
margin_bottom = 101.0
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer/cont botones"]
margin_top = 117.0
margin_right = 87.0
margin_bottom = 140.0
text = "Salir"

[node name="NGPrompt" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="NuevoJuegoPrompt" parent="NGPrompt" instance=ExtResource( 4 )]
visible = false

[node name="el" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="el"]
position = Vector2( 409, 204 )
scale = Vector2( 1.3125, 1.21875 )
z_index = 2
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="el"]
position = Vector2( 410, 264 )
scale = Vector2( 0.5625, 1.21875 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="el"]
position = Vector2( 381, 258 )
rotation = 0.769084
scale = Vector2( 0.156251, 0.656249 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="el"]
position = Vector2( 435, 256 )
rotation = -0.773184
scale = Vector2( 0.156251, 0.656249 )
texture = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/cont botones/Continuar" to="." method="continuar"]
[connection signal="pressed" from="VBoxContainer/cont botones/JuegoNuevo" to="." method="mostrar_prompt_nuevo_juego" binds= [ true ]]
[connection signal="pressed" from="VBoxContainer/cont botones/Salir" to="." method="quit"]
[connection signal="aceptado" from="NGPrompt/NuevoJuegoPrompt" to="." method="empezar_nuevo_juego"]
[connection signal="cancelado" from="NGPrompt/NuevoJuegoPrompt" to="." method="mostrar_prompt_nuevo_juego" binds= [ false ]]
